# ardupilot

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  package.xml  waf  wscript
.github/workflows/: test_scripts.yml
ArduCopter/: AP_ExternalControl_Copter.cpp  AP_ExternalControl_Copter.h  Copter.h  config.h  mode.cpp  mode.h  mode_offboard.cpp  takeoff.cpp
ArduPlane/: AP_ExternalControl_Plane.cpp  AP_ExternalControl_Plane.h  GCS_Mavlink.cpp  GCS_Mavlink.h  Plane.cpp  Plane.h  mode.h  mode_guided.cpp
Rover/: Rover.h
Tools/AP_Bootloader/: AP_Bootloader_config.h  network.cpp
Tools/Replay/: bin_to_csv_motors.py
Tools/ardupilotwaf/: boards.py
Tools/autotest/: common.py
Tools/autotest/models/: Radian.json
Tools/environment_install/: install-prereqs-arch.sh  install-prereqs-mac.sh  install-prereqs-ubuntu.sh
Tools/ros2/ardupilot_dds_tests/ardupilot_dds_tests/: plane_waypoint_follower.py
Tools/ros2/ardupilot_dds_tests/test/ardupilot_dds_tests/: test_plane_wp_follower.py
Tools/ros2/ardupilot_msgs/: CMakeLists.txt
Tools/ros2/ardupilot_msgs/msg/: Trajectory.msg  TrajectoryFeedback.msg
Tools/scripts/: build_ci.sh  build_options.py
Tools/scripts/ros2/: ros2.repos
libraries/: CMakeLists.txt
libraries/AP_ADSB/: AP_ADSB_uAvionix_UCP.cpp
libraries/AP_AHRS/: AP_AHRS_DCM.cpp
libraries/AP_AirSensor/: AP_AirSensor_config.h  README.md
libraries/AP_Airspeed/: AP_Airspeed.cpp  AP_Airspeed.h  AP_Airspeed_Params.cpp  AP_Airspeed_Synthetic.cpp  AP_Airspeed_Synthetic.h  AP_Airspeed_config.h
libraries/AP_Arming/: AP_Arming.cpp  AP_Arming.h
libraries/AP_BattMonitor/: AP_BattMonitor_DroneCAN.h
libraries/AP_Common/: AP_Checksum.cpp  AP_Checksum.h  AP_Common.h  CMakeLists.txt  Location.h
libraries/AP_Common/missing/: type_traits
libraries/AP_Common/tests/: test_ap_checksum.cpp  test_ap_common.cpp
libraries/AP_Compass/: AP_Compass_DroneCAN.h
libraries/AP_DAL/: AP_DAL.cpp  AP_DAL.h  AP_DAL_GPS.cpp  LogStructure.h
libraries/AP_DDS/: AP_DDS_Client.cpp  AP_DDS_Client.h  AP_DDS_ExternalControl.cpp  AP_DDS_ExternalControl.h  AP_DDS_Topic_Table.h  AP_DDS_UDP.cpp  AP_DDS_config.h  README.md  dds_xrce_profile.xml  send_trajectory.sh  wscript
libraries/AP_DDS/Idl/ardupilot_msgs/msg/: Trajectory.idl
libraries/AP_DDS/Idl/sensor_msgs/msg/: Joy.idl
libraries/AP_ExternalAHRS/: AP_ExternalAHRS.cpp  AP_ExternalAHRS.h  AP_ExternalAHRS_GSOF.cpp  AP_ExternalAHRS_GSOF.h  AP_ExternalAHRS_MicroStrain5.cpp  AP_ExternalAHRS_MicroStrain7.cpp  AP_ExternalAHRS_MicroStrain7.h  AP_ExternalAHRS_backend.h  AP_ExternalAHRS_config.h  MicroStrain_common.cpp  MicroStrain_common.h  wscript
libraries/AP_ExternalControl/: AP_ExternalControl.cpp  AP_ExternalControl.h  AP_ExternalControl_config.h
libraries/AP_Follow/: AP_Follow.h
libraries/AP_GPS/: AP_GPS.cpp  AP_GPS_Blended.cpp  AP_GPS_GSOF.cpp  AP_GPS_GSOF.h
libraries/AP_GSOF/: AP_GSOF.cpp  AP_GSOF.h
libraries/AP_GSOF/tests/: test_gsof.cpp
libraries/AP_HAL/: AP_HAL_Boards.h  CMakeLists.txt  DSP.cpp  GPIO.cpp
libraries/AP_HAL_ESP32/targets/esp32/esp-idf/: CMakeLists.txt
libraries/AP_HAL_ESP32/targets/esp32s3/esp-idf/: CMakeLists.txt
libraries/AP_InertialSensor/: AP_InertialSensor.h
libraries/AP_Math/: crc.cpp  crc.h
libraries/AP_Mission/: AP_Mission.h
libraries/AP_Motors/: AP_MotorsMulticopter.cpp  AP_MotorsMulticopter.h
libraries/AP_NavEKF3/: AP_NavEKF3.cpp
libraries/AP_Networking/: AP_Networking.h  AP_Networking_Config.h
libraries/AP_Scripting/examples/: motor_replay.lua  trisonica-mini.lua  trisonicia-mini.md  wind-decode.lua
libraries/AP_Soaring/: AP_Soaring.cpp  AP_Soaring.h  AP_Soaring_config.h
libraries/AP_TECS/: AP_TECS.h
libraries/AP_Terrain/: AP_Terrain.h
libraries/AP_Terrain/tests/: test_terrain.cpp
libraries/AP_XRCE_Client/: AP_XRCE_Client.cpp  AP_XRCE_Client.h  AP_XRCE_Gather_Data.cpp  AP_XRCE_Gather_Data.h  AP_XRCE_ROS2_Builtin_Interfaces_Topics.cpp  AP_XRCE_Topic_Table.h  Dockerfile  README.md  dds_xrce_profile.xml  wscript
libraries/GCS_MAVLink/: CMakeLists.txt
libraries/SITL/: SIM_Aircraft.cpp  SIM_Aircraft.h  SIM_Battery.cpp  SIM_Battery.h  SIM_Frame.cpp  SIM_Frame.h  SIM_GPS.cpp  SIM_GPS.h  SIM_Helicopter.h  SIM_LM2755.h  SIM_MicroStrain.cpp  SIM_MicroStrain.h  SIM_Plane.cpp  SIM_Plane.h  SIM_VectorNav.h  SIM_XPlane.h  SITL.h
libraries/SITL/examples/EvaluateBatteryModel/: EvaluateBatteryModel.cpp
